<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorOnBackground"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingHorizontal="5dp"
    android:paddingVertical="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardFavourites"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivFavourites"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="?mc_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|start"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_favorite"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/favourites"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPlaylists"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPlaylists"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="?mc_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|start"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_music"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/playlists"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardRecent"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivRecent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="?mc_bg" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/trans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|start"
                android:orientation="vertical"
                android:padding="12dp">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_recent"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/recent"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>